<resources>
    <string name="MENU_about">About BeyondPod</string>
    <string name="adv_settings_allow_pultorefresh_summary">Update feeds and download episodes using Pull-To-Refresh</string>
    <string name="adv_settings_allow_pultorefresh_title">Enable Pull-To-Refresh</string>
    <string name="adv_settings_attach_file_when_sharing_summary">When sharing episode, attach the downloaded episode file. Enable when sharing to DropBox, Google Drive etc.</string>
    <string name="adv_settings_attach_file_when_sharing_title">Attach episode files when Sharing</string>
    <string name="adv_settings_custom_sdcard_location_summary">Enter a custom path where BeyondPod will store downloaded podcast episodes</string>
    <string name="adv_settings_custom_sdcard_location_title">Episode Download Path</string>
    <string name="adv_settings_enable_logging_summary">Enables detailed application log</string>
    <string name="adv_settings_enable_logging_title">Enable Logging</string>
    <string name="adv_settings_http_timeout_summary">Default timeout in seconds for http connections when updating feeds or downloading podcasts</string>
    <string name="adv_settings_http_timout_title">Connection Timeout</string>
    <string name="adv_settings_http_user_agent_summary">Enter a full user agent string or MO (for Mozilla) or IE (for Internet Explorer)</string>
    <string name="adv_settings_http_user_agent_title">User Agent</string>
    <string name="adv_settings_keep_screen_on_if_wifi_summary">Keeps the screen On if updating over WiFi. (Check if WiFi updates fail often)</string>
    <string name="adv_settings_keep_screen_on_if_wifi_title">Screen ON for WiFi</string>
    <string name="feed_properties_advanced_section">Advanced Settings</string>
    <string name="settings_AutoPlaySmartplays_summary">When SmartPlay is selected, automatically play the first episode</string>
    <string name="settings_AutoPlaySmartplays_title">Auto Play SmartPlays</string>
    <string name="settings_AutoRebuildKeepCurrent_title">Keep Current Episode</string>
    <string name="settings_ClearPlaylistKeepCurrent_summary">When clearing the playlist, keep the current episode at the top of the playlist</string>
    <string name="settings_HeadsetButtons_DC_summary">Double click of the wired headset button</string>
    <string name="settings_HeadsetButtons_DC_title">Double Click</string>
    <string name="settings_HeadsetButtons_LP_summary">Long press of the wired headset button</string>
    <string name="settings_HeadsetButtons_LP_title">Long Press</string>
    <string name="settings_HeadsetButtons_Next_summary">Next button of wired or bluetooth headset</string>
    <string name="settings_HeadsetButtons_Next_title">Next Button</string>
    <string name="settings_HeadsetButtons_Prev_summary">Previous button of wired or bluetooth headset</string>
    <string name="settings_HeadsetButtons_Prev_title">Previous Button</string>
    <string name="settings_HeadsetButtons_title">Headset Button Actions</string>
    <string name="settings_PauseResume_summary">Pause on headset disconnect, power disconnect, notification, configure screen timeout…</string>
    <string name="settings_allow_cleanup_for_manual_downloads_summary">Enables feed cleanup rules for podcasts that are downloaded manually</string>
    <string name="settings_allow_cleanup_for_manual_downloads_title">Allow Cleanup for Manual Downloads</string>
    <string name="settings_allowcellular_summary">Check if you allow the use of mobile (EDGE/3G/4G) connection for feed updates.</string>
    <string name="settings_allowcellular_title">Use Mobile Data</string>
    <string name="settings_autoLoadPlugins_summary">Allows viewing of some videos that are embedded in the post content.</string>
    <string name="settings_autoLoadPlugins_title">Enable Browser Plug-ins</string>
    <string name="settings_auto_clean_unused_episodes_summary">"Automatically delete all played episodes as part of the next update. (Episodes marked as 'Favorite' are not deleted)"</string>
    <string name="settings_auto_clean_unused_episodes_title">Automatically Delete Played Episodes</string>
    <string name="settings_auto_resume_partial_downloads_summary">Automatically retry downloading any partially downloaded episodes as part of the next update</string>
    <string name="settings_auto_resume_partial_downloads_title">Automatically Resume Partial Downloads</string>
    <string name="settings_automaticUpdates_title">Automatic Updates</string>
    <string name="settings_backup_restore_title">Backup and Restore</string>
    <string name="settings_category_sd_card_location_preferences">Podcast Storage Location</string>
    <string name="settings_cds_title">Configure EpisodeSync</string>
    <string name="settings_clearstatusnotification_summary">Check if you want to hide the notification icon at the end of update</string>
    <string name="settings_clearstatusnotification_title">Hide Notification Icon</string>
    <string name="settings_defSendToEmail_dlg_title">Default Email Recipients</string>
    <string name="settings_defSendToEmail_summary">Default set of e-mail addresses when e-mailing article links from BeyondPod</string>
    <string name="settings_defSendToEmail_title">Default Email Recipients</string>
    <string name="settings_downloadoncharging_summary">Download podcast episodes only if device is charging.</string>
    <string name="settings_downloadoncharging_title">Download if Charging Only</string>
    <string name="settings_downloadonwifi_summary">Download episodes only if connected to a WiFi network.</string>
    <string name="settings_downloadonwifi_title">Download on WiFi Only</string>
    <string name="settings_enableFadein_summary">Softly increases the volume from zero to normal level when playback starts</string>
    <string name="settings_enableFadein_title">Enable Fade-In</string>
    <string name="settings_enableHeadsetButton_summary">Use the headset or bluetooth buttons to control the playback</string>
    <string name="settings_enableHeadsetButton_title">Enable Headset Button</string>
    <string name="settings_enable_presto_summary">Use Presto audio plugin if installed (restart is required)</string>
    <string name="settings_enable_presto_title">Enable Presto</string>
    <string name="settings_enable_sonic_player_summary">Enables native support for variable playback speed (Jelly Bean and later only)</string>
    <string name="settings_enable_sonic_player_title">Enable Sonic Player</string>
    <string name="settings_feedContent_title">Feed Content Settings</string>
    <string name="settings_force_feed_album_art_summary">Use the feed album art for audio episodes</string>
    <string name="settings_force_feed_album_art_title">Use Feed Album Art</string>
    <string name="settings_general_summary">Theme, Home Screen, Global sort, feed and episode settings…</string>
    <string name="settings_general_title">General Settings</string>
    <string name="settings_hideUnsupportedFileTypes_summary">Hides media file types that the device cannot Play</string>
    <string name="settings_hideUnsupportedFileTypes_title">Hide Unsupported Media</string>
    <string name="settings_ignoreReaderReadStatus_summary">"Check if you DO NOT want to synchronize the 'Read' status of posts with Feedly."</string>
    <string name="settings_ignoreReaderReadStatus_title">"Ignore Feedly 'Read' Status"</string>
    <string name="settings_margin_navigation_summary">Double-tap on the post content to close the post view</string>
    <string name="settings_margin_navigation_title">Close on Double tap</string>
    <string name="settings_markAsReadOnOpen_summary">Controls which posts should be marked as Read when viewing the post content</string>
    <string name="settings_markAsReadOnOpen_title">Mark Read On Open</string>
    <string name="settings_orientation_lock_summary">Allows you to lock the screen orientation in portrait or landscape mode</string>
    <string name="settings_orientation_lock_title">Display Orientation</string>
    <string name="settings_player_plugins_only_if_configured_summary">Use the plug-in only for feeds that are explicitly configured to play at a higher speed in their settings</string>
    <string name="settings_player_plugins_only_if_configured_title">Use only if Configured</string>
    <string name="settings_player_summary">Skip intervals, Headset Button, Streaming Preferences…</string>
    <string name="settings_player_title">Player Settings</string>
    <string name="settings_playlist_summary">Playlist behavior, episode auto deletion…</string>
    <string name="settings_playlist_title">Playlist Settings</string>
    <string name="settings_podcastsSortOrder_summary">Select the default sort order for downloaded podcast episodes</string>
    <string name="settings_podcastsSortOrder_title">"'My Episodes' Sort Order"</string>
    <string name="settings_prefer_last_sd_card_root_summary">Force BeyondPod to always use the current download path:</string>
    <string name="settings_prefer_last_sd_card_root_title">Lock to Current Path</string>
    <string name="settings_scrobble_summary">Publishes information about the currently playing episode to externally connected devices. (Enabling may break Bluetooth audio support)</string>
    <string name="settings_scrobble_title">Publish Current Episode</string>
    <string name="settings_setAsDownloadedOnMarkRead_summary">"Podcast episodes are marked as 'Downloaded' when their post is marked as 'Read'"</string>
    <string name="settings_setAsDownloadedOnMarkRead_title">Set Downloaded on Read</string>
    <string name="settings_setAsPlayedOnMarkRead_summary">"Podcast episodes are marked as 'Played' when their post is marked as 'Read'"</string>
    <string name="settings_setAsPlayedOnMarkRead_title">Set Played on Read</string>
    <string name="settings_sharePodcasts_summary">Check if you want the Android Music Player to see downloaded BeyondPod podcast episodes</string>
    <string name="settings_sharePodcasts_title">Episodes Visible in Music Player</string>
    <string name="settings_show_post_images_in_feed_content_list_summary">"Show a thumbnail of the 'significant' post image in the list of feed posts"</string>
    <string name="settings_show_post_images_in_feed_content_list_title">Show Post Thumbnails</string>
    <string name="settings_sleep_timeout_summary">"Custom timeout (in minutes) for player's Sleep function"</string>
    <string name="settings_sleep_timeout_title">Custom Sleep Timeout</string>
    <string name="settings_supportedFileFormats_summary">File types that BeyondPod recognizes and displays</string>
    <string name="settings_supportedFileFormats_title">Supported File Types</string>
    <string name="settings_togglewifi_summary">Check if you want to turn WiFi On during the feed updates.</string>
    <string name="settings_togglewifi_title">Toggle WiFi on Update</string>
    <string name="settings_update_summary">Schedule automatic feed updates, Toggle WiFi, Mobile Data, Episode Download…</string>
    <string name="settings_update_title">Feed Update Settings</string>
    <string name="settings_updateonopen_summary">Check if you want to automatically update the feed when it is open.</string>
    <string name="settings_updateonopen_title">Update on Open Feed</string>
    <string name="settings_useExternalBrowser_summary">Check if you want to open external links in the device default browser.</string>
    <string name="settings_useExternalBrowser_title">Use External Browser</string>
    <string name="settings_view_title">BeyondPod Settings</string>
    <string name="settings_view_update_log_message">Last update: %s</string>
    <string name="settings_view_update_log_title">View Update Log</string>
    <string name="settings_volumeNavigation_summary">Use hardware volume controls to navigate between feed posts</string>
    <string name="settings_volumeNavigation_title">Navigate with Volume Controls</string>
</resources>