<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/feed_properties_advanced_section"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/settings_player_title">
        <CheckBoxPreference android:title="@string/settings_enable_sonic_player_title" android:key="EnableSonicAudioPlugin" android:summary="@string/settings_enable_sonic_player_summary" android:defaultValue="false" />
        <CheckBoxPreference android:title="@string/settings_enable_presto_title" android:key="EnablePresto" android:summary="@string/settings_enable_presto_summary" android:dependency="EnableSonicAudioPlugin" android:defaultValue="false" />
        <CheckBoxPreference android:title="@string/settings_hideUnsupportedFileTypes_title" android:key="HideUnsupportedFileTypes" android:summary="@string/settings_hideUnsupportedFileTypes_summary" />
        <EditTextPreference android:title="@string/settings_supportedFileFormats_title" android:key="PlayerSupportedFileExtensions" android:summary="@string/settings_supportedFileFormats_summary" android:dependency="HideUnsupportedFileTypes" android:dialogTitle="@string/settings_supportedFileFormats_title" />
        <CheckBoxPreference android:title="@string/settings_scrobble_title" android:key="ScrobbleEnabled" android:summary="@string/settings_scrobble_summary" />
        <CheckBoxPreference android:title="@string/settings_enableFadein_title" android:key="EnableFadeInOnPlaybackStart" android:summary="@string/settings_enableFadein_summary" android:defaultValue="false" />
        <CheckBoxPreference android:title="@string/settings_player_plugins_only_if_configured_title" android:key="UseAudioPluginForConfiguredFeedsOnly" android:summary="@string/settings_player_plugins_only_if_configured_summary" android:defaultValue="false" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_playlist_title">
        <CheckBoxPreference android:title="@string/settings_AutoRebuildKeepCurrent_title" android:key="KeepCurrentEpisodeForClearPlaylist" android:summary="@string/settings_ClearPlaylistKeepCurrent_summary" android:defaultValue="false" />
        <CheckBoxPreference android:title="@string/settings_AutoPlaySmartplays_title" android:key="AutoPlaySmartPlaylists" android:summary="@string/settings_AutoPlaySmartplays_summary" android:defaultValue="true" />
        <CheckBoxPreference android:title="@string/settings_sharePodcasts_title" android:key="SharePodcasts" android:summary="@string/settings_sharePodcasts_summary" android:defaultValue="true" />
        <EditTextPreference android:title="@string/settings_sleep_timeout_title" android:key="PlayerSleepTimeout" android:summary="@string/settings_sleep_timeout_summary" android:dialogTitle="@string/settings_sleep_timeout_title" android:inputType="phone" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_feedContent_title">
        <ListPreference android:entries="@array/settings_trackSortOrder_text" android:title="@string/settings_podcastsSortOrder_title" android:key="PodcastsSortOrder" android:summary="@string/settings_podcastsSortOrder_summary" android:dialogTitle="@string/settings_podcastsSortOrder_title" android:entryValues="@array/settings_trackSortOrder_values" />
        <ListPreference android:entries="@array/settings_markAsReadOnOpen_text" android:title="@string/settings_markAsReadOnOpen_title" android:key="MarkAsReadOnOpen" android:summary="@string/settings_markAsReadOnOpen_summary" android:dialogTitle="@string/settings_markAsReadOnOpen_title" android:entryValues="@array/settings_markAsReadOnOpen_values" />
        <CheckBoxPreference android:title="@string/settings_setAsDownloadedOnMarkRead_title" android:key="SetAsDownloadedOnMarkRead" android:summary="@string/settings_setAsDownloadedOnMarkRead_summary" />
        <CheckBoxPreference android:title="@string/settings_setAsPlayedOnMarkRead_title" android:key="SetAsPlayedOnMarkRead" android:summary="@string/settings_setAsPlayedOnMarkRead_summary" />
        <CheckBoxPreference android:title="@string/settings_useExternalBrowser_title" android:key="UseExternalBrowser" android:summary="@string/settings_useExternalBrowser_summary" />
        <CheckBoxPreference android:title="@string/settings_autoLoadPlugins_title" android:key="EnableBrowserPlugins" android:summary="@string/settings_autoLoadPlugins_summary" />
        <CheckBoxPreference android:title="@string/adv_settings_attach_file_when_sharing_title" android:key="AttachDownloadedPodcastsWhenSharing" android:summary="@string/adv_settings_attach_file_when_sharing_summary" android:defaultValue="false" />
        <EditTextPreference android:title="@string/settings_defSendToEmail_title" android:key="DefaultSendToEmails" android:summary="@string/settings_defSendToEmail_summary" android:dialogTitle="@string/settings_defSendToEmail_dlg_title" />
        <CheckBoxPreference android:title="@string/settings_show_post_images_in_feed_content_list_title" android:key="ShowContentListPostImages" android:summary="@string/settings_show_post_images_in_feed_content_list_summary" android:defaultValue="true" />
        <CheckBoxPreference android:title="@string/settings_force_feed_album_art_title" android:key="UseFeedAlbumArtForEpisodes" android:summary="@string/settings_force_feed_album_art_summary" android:defaultValue="false" />
        <CheckBoxPreference android:title="@string/settings_ignoreReaderReadStatus_title" android:key="IgnoreGoogleReaderReadStatus" android:summary="@string/settings_ignoreReaderReadStatus_summary" android:defaultValue="false" />
        <CheckBoxPreference android:title="@string/settings_margin_navigation_title" android:key="AllowMarginNavigationInFeedItemContentDialog" android:summary="@string/settings_margin_navigation_summary" android:defaultValue="false" />
        <ListPreference android:entries="@array/settings_volumeNavigation_text" android:title="@string/settings_volumeNavigation_title" android:key="VolumeControlsNavigationType" android:summary="@string/settings_volumeNavigation_summary" android:defaultValue="0" android:dialogTitle="@string/settings_volumeNavigation_title" android:entryValues="@array/settings_volumeNavigation_values" />
        <ListPreference android:entries="@array/settings_orientation_lock_text" android:title="@string/settings_orientation_lock_title" android:key="OrientationLock" android:summary="@string/settings_orientation_lock_summary" android:defaultValue="0" android:dialogTitle="@string/settings_orientation_lock_title" android:entryValues="@array/settings_orientation_lock_values" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_update_title">
        <CheckBoxPreference android:title="@string/settings_updateonopen_title" android:key="UpdateOnFeedOpen" android:summary="@string/settings_updateonopen_summary" />
        <EditTextPreference android:title="@string/adv_settings_http_user_agent_title" android:key="DefaultUserAgent" android:summary="@string/adv_settings_http_user_agent_summary" android:dialogTitle="@string/adv_settings_http_user_agent_title" />
        <EditTextPreference android:title="@string/adv_settings_http_timout_title" android:key="HttpConnectionTimeout" android:summary="@string/adv_settings_http_timeout_summary" android:dialogTitle="@string/adv_settings_http_timout_title" />
        <CheckBoxPreference android:title="@string/settings_allow_cleanup_for_manual_downloads_title" android:key="AllowCleanupForManualDownloads" android:summary="@string/settings_allow_cleanup_for_manual_downloads_summary" android:defaultValue="false" />
        <ListPreference android:entries="@array/settings_screen_power_state_during_wifi_updates_text" android:title="@string/adv_settings_keep_screen_on_if_wifi_title" android:key="ScreenPowerStateDuringWiFiUpdates" android:summary="@string/adv_settings_keep_screen_on_if_wifi_summary" android:defaultValue="0" android:dialogTitle="@string/adv_settings_keep_screen_on_if_wifi_title" android:entryValues="@array/settings_screen_power_state_during_wifi_updates_values" />
        <CheckBoxPreference android:title="@string/settings_auto_resume_partial_downloads_title" android:key="AutomaticallyReDownloadPartialEpisodes" android:summary="@string/settings_auto_resume_partial_downloads_summary" android:defaultValue="true" />
        <CheckBoxPreference android:title="@string/settings_auto_clean_unused_episodes_title" android:key="AutomaticallyCleanPlayedEpisodes" android:summary="@string/settings_auto_clean_unused_episodes_summary" android:defaultValue="false" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_category_sd_card_location_preferences">
        <mobi.beyondpod.rsscore.DownloadFolderPreference android:title="@string/adv_settings_custom_sdcard_location_title" android:key="CustomSDCardLocation" android:summary="@string/adv_settings_custom_sdcard_location_summary" android:dialogTitle="@string/adv_settings_custom_sdcard_location_title" />
        <CheckBoxPreference android:title="@string/settings_prefer_last_sd_card_root_title" android:key="PreferLastSDCardRoot" android:summary="@string/settings_prefer_last_sd_card_root_summary" android:defaultValue="false" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_general_title">
        <CheckBoxPreference android:title="@string/adv_settings_enable_logging_title" android:key="EnableLoggingInProduction" android:summary="@string/adv_settings_enable_logging_summary" />
    </PreferenceCategory>
</PreferenceScreen>