<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/settings_HeadsetButtons_title" android:key="headset_preferences" android:summary="@string/settings_PauseResume_summary"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference android:title="@string/settings_enableHeadsetButton_title" android:key="EnableHeadsetButton" android:summary="@string/settings_enableHeadsetButton_summary" />
    <ListPreference android:entries="@array/settings_configure_bt_buttons_text" android:title="@string/settings_HeadsetButtons_Next_title" android:key="BTNextButtonAction" android:summary="@string/settings_HeadsetButtons_Next_summary" android:dependency="EnableHeadsetButton" android:defaultValue="1" android:dialogTitle="@string/settings_HeadsetButtons_Next_title" android:entryValues="@array/settings_configure_bt_buttons_values" />
    <ListPreference android:entries="@array/settings_configure_bt_buttons_text" android:title="@string/settings_HeadsetButtons_Prev_title" android:key="BTPreviousButtonAction" android:summary="@string/settings_HeadsetButtons_Prev_summary" android:dependency="EnableHeadsetButton" android:defaultValue="2" android:dialogTitle="@string/settings_HeadsetButtons_Prev_title" android:entryValues="@array/settings_configure_bt_buttons_values" />
    <ListPreference android:entries="@array/settings_configure_bt_buttons_text" android:title="@string/settings_HeadsetButtons_LP_title" android:key="WRLongPressButtonAction" android:summary="@string/settings_HeadsetButtons_LP_summary" android:dependency="EnableHeadsetButton" android:defaultValue="3" android:dialogTitle="@string/settings_HeadsetButtons_LP_title" android:entryValues="@array/settings_configure_bt_buttons_values" />
    <ListPreference android:entries="@array/settings_configure_bt_buttons_text" android:title="@string/settings_HeadsetButtons_DC_title" android:key="WRDoubleClickButtonAction" android:summary="@string/settings_HeadsetButtons_DC_summary" android:dependency="EnableHeadsetButton" android:defaultValue="1" android:dialogTitle="@string/settings_HeadsetButtons_DC_title" android:entryValues="@array/settings_configure_bt_buttons_values" />
</PreferenceScreen>